<resources>
    <string name="app_name">Gif App</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>


    <string name="facebook_app_id">722413805027589</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fund_name">Fund Name</string>
    <string name="fund_desc">Fund Description</string>
    <string name="more_info">More Info</string>
    <string name="deals">Deals</string>
    <string name="coupons">Coupons</string>
    <string name="fact_sheet">Fact Sheet</string>
    <string name="explore">Explore</string>
    <string name="top_trending">Top Trending Deals</string>
    <string name="account_statement">Account Statement</string>
    <string name="all_apps">All Apps</string>
    <string name="super_mart">Super Marts</string>
    <string name="groceries">Groceries</string>
    <string name="medicines">Medicines</string>
    <string name="supplements">Supplements</string>
    <string name="electronics">Electronics</string>
    <string name="jewellery">Jewellery</string>
    <string name="kitchen_appliances">Kitchen Appliances</string>
    <string name="kids_lifestyle">Kids Lifestyle</string>
    <string name="baby_toys">Baby Toys</string>
    <string name="lingerie">Lingerie</string>
    <string name="men_inner_wear">Men\'s Inner Wear</string>
    <string name="books">Books</string>
    <string name="footwear">Footwear</string>
    <string name="beauty">Beauty</string>
    <string name="ad">Ad</string>
    <string name="india">India</string>
    <string name="usa">USA</string>
    <string name="russia">Russia</string>
    <string name="china">China</string>
    <string name="pakistan">Pakistan</string>
    <string name="italy">Italy</string>
    <string name="uae">UAE</string>
    <string name="turkey">Turkey</string>
    <string name="switzerland">Switzerland</string>
    <string name="canada">Canada</string>
    <string name="singapore">Singapore</string>
    <string name="south_africa">South Africa</string>
    <string name="france">France</string>
    <string name="germany">Germany</string>
    <string name="japan">Japan</string>
    <string name="brazil">Brazil</string>
    <string name="indonesia">Indonesia</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="nigeria">Nigeria</string>
    <string name="portugul">Portugul</string>
    <string name="australia">Australia</string>
    <string name="greece">Greece</string>
    <string name="latestpoems">Latest Poems</string>

</resources>